welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: value || is not a member of Int
{	if (nums(i) == 2 && nums(i+1) == 7 && nums(i+2) == (nums(i)-3||nums(i)-2||nums(i)-1||nums(i)||nums(i)+1)) {return true}
                                                                     ^